parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND_LOGICO
    ASIGNAR_DIV
    ASIGNAR_MULT
    ASIGNAR_RESTA
    ASIGNAR_SUMA
    CADENA
    COMILLA_DOBLE
    COMILLA_SIMPLE
    COMPARAR_DIF
    DECREMENTO
    DIR_DEFINIR
    DIR_INCLUIR
    DIR_UNDEFINIR
    DIVISION_ENTERA
    ESTATICO
    INCREMENTO
    MAYOR_IGUAL
    MENOR_IGUAL
    NEGACION
    OR_LOGICO
    eof

Grammar

Rule 0     S' -> program
Rule 1     program -> SVar program
Rule 2     program -> SStruct SInst
Rule 3     program -> empty
Rule 4     SInst -> SVar SInst
Rule 5     SInst -> SIfElse SInst
Rule 6     SInst -> SWhile SInst
Rule 7     SInst -> SDoWhile SInst
Rule 8     SInst -> SFor SInst
Rule 9     SInst -> SRet SInst
Rule 10    SInst -> SArr SInst
Rule 11    SInst -> SBreak SInst
Rule 12    SInst -> empty
Rule 13    empty -> <empty>
Rule 14    SOpe -> AOpe ZOpe
Rule 15    ZOpe -> SUMAR AOpe ZOpe
Rule 16    ZOpe -> RESTAR AOpe ZOpe
Rule 17    ZOpe -> COMPARAR_IGUAL AOpe ZOpe
Rule 18    ZOpe -> MAYOR_QUE AOpe ZOpe
Rule 19    ZOpe -> MENOR_QUE AOpe ZOpe
Rule 20    ZOpe -> empty
Rule 21    AOpe -> COpe BOpe
Rule 22    BOpe -> MULTIPLICAR COpe BOpe
Rule 23    BOpe -> DIVIDIR COpe BOpe
Rule 24    BOpe -> MODULO COpe BOpe
Rule 25    BOpe -> AND_LOGICO_CONDICIONAL COpe BOpe
Rule 26    BOpe -> OR_LOGICO_CONDICIONAL COpe BOpe
Rule 27    BOpe -> empty
Rule 28    DOpe -> CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER
Rule 29    DOpe -> empty
Rule 30    COpe -> PAREN_IZQ SOpe PAREN_DER
Rule 31    COpe -> EOpe
Rule 32    COpe -> NUMERO_DECIMAL
Rule 33    COpe -> NUMERO_ENTERO
Rule 34    EOpe -> IDENTIFICADOR FOpe
Rule 35    FOpe -> DOpe
Rule 36    FOpe -> IDENTIFICADOR FOpe
Rule 37    FOpe -> PUNTO FOpe
Rule 38    SVar -> STipos IDENTIFICADOR FVar
Rule 39    SVar -> IDENTIFICADOR DVar
Rule 40    AVar -> ASIGNAR BVar
Rule 41    AVar -> COMA IDENTIFICADOR AVar
Rule 42    AVar -> PUNTO_COMA
Rule 43    BVar -> SOpe CVar
Rule 44    BVar -> CARACTER CVar
Rule 45    BVar -> IDENTIFICADOR SFunc AVar
Rule 46    CVar -> PUNTO_COMA
Rule 47    CVar -> COMA BVar
Rule 48    DVar -> ASIGNAR EVar
Rule 49    DVar -> PUNTO_COMA
Rule 50    EVar -> SOpe PUNTO_COMA
Rule 51    EVar -> CARACTER PUNTO_COMA
Rule 52    EVar -> IDENTIFICADOR SFunc DVar
Rule 53    FVar -> AVar
Rule 54    FVar -> PAREN_IZQ GVar
Rule 55    GVar -> STipos HVar
Rule 56    GVar -> PAREN_DER JVar
Rule 57    HVar -> IDENTIFICADOR IVar
Rule 58    HVar -> IVar
Rule 59    IVar -> COMA GVar
Rule 60    IVar -> PAREN_DER JVar
Rule 61    JVar -> PUNTO_COMA
Rule 62    JVar -> LLAVE_IZQ SInst LLAVE_DER
Rule 63    STipos -> TIPO_ENTERO
Rule 64    STipos -> TIPO_CADENA
Rule 65    STipos -> TIPO_LARGO
Rule 66    STipos -> TIPO_VACIO
Rule 67    STipos -> TIPO_CARACTER
Rule 68    STipos -> TIPO_FLOTANTE
Rule 69    STipos -> TIPO_DOUBLE
Rule 70    SFunc -> PAREN_IZQ AFunc
Rule 71    SFunc -> empty
Rule 72    AFunc -> PAREN_DER
Rule 73    AFunc -> IDENTIFICADOR BFunc
Rule 74    BFunc -> COMA IDENTIFICADOR BFunc
Rule 75    BFunc -> PAREN_DER
Rule 76    SIfElse -> CONDICIONAL PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ AIfElse
Rule 77    AIfElse -> SInst LLAVE_DER BIfElse
Rule 78    BIfElse -> empty
Rule 79    BIfElse -> CASO_CONTRARIO CIfElse
Rule 80    CIfElse -> LLAVE_IZQ AIfElse
Rule 81    CIfElse -> SIfElse
Rule 82    SRet -> RETORNAR ARet
Rule 83    ARet -> SOpe PUNTO_COMA
Rule 84    ARet -> CARACTER PUNTO_COMA
Rule 85    SArr -> IDENTIFICADOR CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER ASIGNAR SOpe PUNTO_COMA
Rule 86    SArr -> STipos IDENTIFICADOR CORCHETE_IZQ AArr
Rule 87    AArr -> NUMERO_ENTERO CORCHETE_DER BArr
Rule 88    AArr -> CORCHETE_DER CArr
Rule 89    BArr -> CArr
Rule 90    BArr -> PUNTO_COMA
Rule 91    CArr -> ASIGNAR LLAVE_IZQ DArr
Rule 92    DArr -> SOpe EArr
Rule 93    DArr -> CARACTER EArr
Rule 94    EArr -> COMA DArr
Rule 95    EArr -> LLAVE_DER PUNTO_COMA
Rule 96    SStruct -> ESTRUCTURA AStruct
Rule 97    AStruct -> IDENTIFICADOR LLAVE_IZQ BStruct LLAVE_DER CStruct
Rule 98    AStruct -> LLAVE_IZQ BStruct LLAVE_DER DStruct
Rule 99    BStruct -> empty
Rule 100   BStruct -> STipos IDENTIFICADOR FStruct
Rule 101   CStruct -> PUNTO_COMA
Rule 102   CStruct -> DStruct
Rule 103   DStruct -> IDENTIFICADOR EStruct
Rule 104   EStruct -> COMA DStruct
Rule 105   EStruct -> PUNTO_COMA
Rule 106   FStruct -> PUNTO_COMA BStruct
Rule 107   FStruct -> CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER PUNTO_COMA BStruct
Rule 108   SWhile -> BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ SInst LLAVE_DER
Rule 109   SDoWhile -> HACER LLAVE_IZQ SInst LLAVE_DER BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER PUNTO_COMA
Rule 110   SFor -> BUCLE_PARA PAREN_IZQ SDecVarFor PUNTO_COMA SOpe PUNTO_COMA SAsigVarFor PAREN_DER LLAVE_IZQ SInst LLAVE_DER
Rule 111   SAsigVarFor -> IDENTIFICADOR ASIGNAR SOpe
Rule 112   SDecVarFor -> STipos IDENTIFICADOR ADecVarFor
Rule 113   ADecVarFor -> ASIGNAR BDecVarFor
Rule 114   ADecVarFor -> COMA BDecVarFor
Rule 115   BDecVarFor -> SOpe CDecVarFor
Rule 116   CDecVarFor -> COMA BDecVarFor
Rule 117   CDecVarFor -> empty
Rule 118   SBreak -> ROMPER PUNTO_COMA

Terminals, with rules where they appear

AND_LOGICO           : 
AND_LOGICO_CONDICIONAL : 25
ASIGNAR              : 40 48 85 91 111 113
ASIGNAR_DIV          : 
ASIGNAR_MULT         : 
ASIGNAR_RESTA        : 
ASIGNAR_SUMA         : 
BUCLE_MIENTRAS       : 108 109
BUCLE_PARA           : 110
CADENA               : 
CARACTER             : 44 51 84 93
CASO_CONTRARIO       : 79
COMA                 : 41 47 59 74 94 104 114 116
COMILLA_DOBLE        : 
COMILLA_SIMPLE       : 
COMPARAR_DIF         : 
COMPARAR_IGUAL       : 17
CONDICIONAL          : 76
CORCHETE_DER         : 28 85 87 88 107
CORCHETE_IZQ         : 28 85 86 107
DECREMENTO           : 
DIR_DEFINIR          : 
DIR_INCLUIR          : 
DIR_UNDEFINIR        : 
DIVIDIR              : 23
DIVISION_ENTERA      : 
ESTATICO             : 
ESTRUCTURA           : 96
HACER                : 109
IDENTIFICADOR        : 34 36 38 39 41 45 52 57 73 74 85 86 97 100 103 111 112
INCREMENTO           : 
LLAVE_DER            : 62 77 95 97 98 108 109 110
LLAVE_IZQ            : 62 76 80 91 97 98 108 109 110
MAYOR_IGUAL          : 
MAYOR_QUE            : 18
MENOR_IGUAL          : 
MENOR_QUE            : 19
MODULO               : 24
MULTIPLICAR          : 22
NEGACION             : 
NUMERO_DECIMAL       : 32
NUMERO_ENTERO        : 28 33 85 87 107
OR_LOGICO            : 
OR_LOGICO_CONDICIONAL : 26
PAREN_DER            : 30 56 60 72 75 76 108 109 110
PAREN_IZQ            : 30 54 70 76 108 109 110
PUNTO                : 37
PUNTO_COMA           : 42 46 49 50 51 61 83 84 85 90 95 101 105 106 107 109 110 110 118
RESTAR               : 16
RETORNAR             : 82
ROMPER               : 118
SUMAR                : 15
TIPO_CADENA          : 64
TIPO_CARACTER        : 67
TIPO_DOUBLE          : 69
TIPO_ENTERO          : 63
TIPO_FLOTANTE        : 68
TIPO_LARGO           : 65
TIPO_VACIO           : 66
eof                  : 
error                : 

Nonterminals, with rules where they appear

AArr                 : 86
ADecVarFor           : 112
AFunc                : 70
AIfElse              : 76 80
AOpe                 : 14 15 16 17 18 19
ARet                 : 82
AStruct              : 96
AVar                 : 41 45 53
BArr                 : 87
BDecVarFor           : 113 114 116
BFunc                : 73 74
BIfElse              : 77
BOpe                 : 21 22 23 24 25 26
BStruct              : 97 98 106 107
BVar                 : 40 47
CArr                 : 88 89
CDecVarFor           : 115
CIfElse              : 79
COpe                 : 21 22 23 24 25 26
CStruct              : 97
CVar                 : 43 44
DArr                 : 91 94
DOpe                 : 35
DStruct              : 98 102 104
DVar                 : 39 52
EArr                 : 92 93
EOpe                 : 31
EStruct              : 103
EVar                 : 48
FOpe                 : 34 36 37
FStruct              : 100
FVar                 : 38
GVar                 : 54 59
HVar                 : 55
IVar                 : 57 58
JVar                 : 56 60
SArr                 : 10
SAsigVarFor          : 110
SBreak               : 11
SDecVarFor           : 110
SDoWhile             : 7
SFor                 : 8
SFunc                : 45 52
SIfElse              : 5 81
SInst                : 2 4 5 6 7 8 9 10 11 62 77 108 109 110
SOpe                 : 30 43 50 76 83 85 92 108 109 110 111 115
SRet                 : 9
SStruct              : 2
STipos               : 38 55 86 100 112
SVar                 : 1 4
SWhile               : 6
ZOpe                 : 14 15 16 17 18 19
empty                : 3 12 20 27 29 71 78 99 117
program              : 1 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . SVar program
    (2) program -> . SStruct SInst
    (3) program -> . empty
    (38) SVar -> . STipos IDENTIFICADOR FVar
    (39) SVar -> . IDENTIFICADOR DVar
    (96) SStruct -> . ESTRUCTURA AStruct
    (13) empty -> .
    (63) STipos -> . TIPO_ENTERO
    (64) STipos -> . TIPO_CADENA
    (65) STipos -> . TIPO_LARGO
    (66) STipos -> . TIPO_VACIO
    (67) STipos -> . TIPO_CARACTER
    (68) STipos -> . TIPO_FLOTANTE
    (69) STipos -> . TIPO_DOUBLE

    IDENTIFICADOR   shift and go to state 6
    ESTRUCTURA      shift and go to state 7
    $end            reduce using rule 13 (empty -> .)
    TIPO_ENTERO     shift and go to state 8
    TIPO_CADENA     shift and go to state 9
    TIPO_LARGO      shift and go to state 10
    TIPO_VACIO      shift and go to state 11
    TIPO_CARACTER   shift and go to state 12
    TIPO_FLOTANTE   shift and go to state 13
    TIPO_DOUBLE     shift and go to state 14

    program                        shift and go to state 1
    SVar                           shift and go to state 2
    SStruct                        shift and go to state 3
    empty                          shift and go to state 4
    STipos                         shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> SVar . program
    (1) program -> . SVar program
    (2) program -> . SStruct SInst
    (3) program -> . empty
    (38) SVar -> . STipos IDENTIFICADOR FVar
    (39) SVar -> . IDENTIFICADOR DVar
    (96) SStruct -> . ESTRUCTURA AStruct
    (13) empty -> .
    (63) STipos -> . TIPO_ENTERO
    (64) STipos -> . TIPO_CADENA
    (65) STipos -> . TIPO_LARGO
    (66) STipos -> . TIPO_VACIO
    (67) STipos -> . TIPO_CARACTER
    (68) STipos -> . TIPO_FLOTANTE
    (69) STipos -> . TIPO_DOUBLE

    IDENTIFICADOR   shift and go to state 6
    ESTRUCTURA      shift and go to state 7
    $end            reduce using rule 13 (empty -> .)
    TIPO_ENTERO     shift and go to state 8
    TIPO_CADENA     shift and go to state 9
    TIPO_LARGO      shift and go to state 10
    TIPO_VACIO      shift and go to state 11
    TIPO_CARACTER   shift and go to state 12
    TIPO_FLOTANTE   shift and go to state 13
    TIPO_DOUBLE     shift and go to state 14

    SVar                           shift and go to state 2
    program                        shift and go to state 15
    SStruct                        shift and go to state 3
    empty                          shift and go to state 4
    STipos                         shift and go to state 5

state 3

    (2) program -> SStruct . SInst
    (4) SInst -> . SVar SInst
    (5) SInst -> . SIfElse SInst
    (6) SInst -> . SWhile SInst
    (7) SInst -> . SDoWhile SInst
    (8) SInst -> . SFor SInst
    (9) SInst -> . SRet SInst
    (10) SInst -> . SArr SInst
    (11) SInst -> . SBreak SInst
    (12) SInst -> . empty
    (38) SVar -> . STipos IDENTIFICADOR FVar
    (39) SVar -> . IDENTIFICADOR DVar
    (76) SIfElse -> . CONDICIONAL PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ AIfElse
    (108) SWhile -> . BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (109) SDoWhile -> . HACER LLAVE_IZQ SInst LLAVE_DER BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER PUNTO_COMA
    (110) SFor -> . BUCLE_PARA PAREN_IZQ SDecVarFor PUNTO_COMA SOpe PUNTO_COMA SAsigVarFor PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (82) SRet -> . RETORNAR ARet
    (85) SArr -> . IDENTIFICADOR CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER ASIGNAR SOpe PUNTO_COMA
    (86) SArr -> . STipos IDENTIFICADOR CORCHETE_IZQ AArr
    (118) SBreak -> . ROMPER PUNTO_COMA
    (13) empty -> .
    (63) STipos -> . TIPO_ENTERO
    (64) STipos -> . TIPO_CADENA
    (65) STipos -> . TIPO_LARGO
    (66) STipos -> . TIPO_VACIO
    (67) STipos -> . TIPO_CARACTER
    (68) STipos -> . TIPO_FLOTANTE
    (69) STipos -> . TIPO_DOUBLE

    IDENTIFICADOR   shift and go to state 27
    CONDICIONAL     shift and go to state 28
    BUCLE_MIENTRAS  shift and go to state 29
    HACER           shift and go to state 30
    BUCLE_PARA      shift and go to state 31
    RETORNAR        shift and go to state 32
    ROMPER          shift and go to state 33
    $end            reduce using rule 13 (empty -> .)
    TIPO_ENTERO     shift and go to state 8
    TIPO_CADENA     shift and go to state 9
    TIPO_LARGO      shift and go to state 10
    TIPO_VACIO      shift and go to state 11
    TIPO_CARACTER   shift and go to state 12
    TIPO_FLOTANTE   shift and go to state 13
    TIPO_DOUBLE     shift and go to state 14

    SInst                          shift and go to state 16
    SVar                           shift and go to state 17
    SIfElse                        shift and go to state 18
    SWhile                         shift and go to state 19
    SDoWhile                       shift and go to state 20
    SFor                           shift and go to state 21
    SRet                           shift and go to state 22
    SArr                           shift and go to state 23
    SBreak                         shift and go to state 24
    empty                          shift and go to state 25
    STipos                         shift and go to state 26

state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (38) SVar -> STipos . IDENTIFICADOR FVar

    IDENTIFICADOR   shift and go to state 34


state 6

    (39) SVar -> IDENTIFICADOR . DVar
    (48) DVar -> . ASIGNAR EVar
    (49) DVar -> . PUNTO_COMA

    ASIGNAR         shift and go to state 36
    PUNTO_COMA      shift and go to state 37

    DVar                           shift and go to state 35

state 7

    (96) SStruct -> ESTRUCTURA . AStruct
    (97) AStruct -> . IDENTIFICADOR LLAVE_IZQ BStruct LLAVE_DER CStruct
    (98) AStruct -> . LLAVE_IZQ BStruct LLAVE_DER DStruct

    IDENTIFICADOR   shift and go to state 39
    LLAVE_IZQ       shift and go to state 40

    AStruct                        shift and go to state 38

state 8

    (63) STipos -> TIPO_ENTERO .

    IDENTIFICADOR   reduce using rule 63 (STipos -> TIPO_ENTERO .)
    COMA            reduce using rule 63 (STipos -> TIPO_ENTERO .)
    PAREN_DER       reduce using rule 63 (STipos -> TIPO_ENTERO .)


state 9

    (64) STipos -> TIPO_CADENA .

    IDENTIFICADOR   reduce using rule 64 (STipos -> TIPO_CADENA .)
    COMA            reduce using rule 64 (STipos -> TIPO_CADENA .)
    PAREN_DER       reduce using rule 64 (STipos -> TIPO_CADENA .)


state 10

    (65) STipos -> TIPO_LARGO .

    IDENTIFICADOR   reduce using rule 65 (STipos -> TIPO_LARGO .)
    COMA            reduce using rule 65 (STipos -> TIPO_LARGO .)
    PAREN_DER       reduce using rule 65 (STipos -> TIPO_LARGO .)


state 11

    (66) STipos -> TIPO_VACIO .

    IDENTIFICADOR   reduce using rule 66 (STipos -> TIPO_VACIO .)
    COMA            reduce using rule 66 (STipos -> TIPO_VACIO .)
    PAREN_DER       reduce using rule 66 (STipos -> TIPO_VACIO .)


state 12

    (67) STipos -> TIPO_CARACTER .

    IDENTIFICADOR   reduce using rule 67 (STipos -> TIPO_CARACTER .)
    COMA            reduce using rule 67 (STipos -> TIPO_CARACTER .)
    PAREN_DER       reduce using rule 67 (STipos -> TIPO_CARACTER .)


state 13

    (68) STipos -> TIPO_FLOTANTE .

    IDENTIFICADOR   reduce using rule 68 (STipos -> TIPO_FLOTANTE .)
    COMA            reduce using rule 68 (STipos -> TIPO_FLOTANTE .)
    PAREN_DER       reduce using rule 68 (STipos -> TIPO_FLOTANTE .)


state 14

    (69) STipos -> TIPO_DOUBLE .

    IDENTIFICADOR   reduce using rule 69 (STipos -> TIPO_DOUBLE .)
    COMA            reduce using rule 69 (STipos -> TIPO_DOUBLE .)
    PAREN_DER       reduce using rule 69 (STipos -> TIPO_DOUBLE .)


state 15

    (1) program -> SVar program .

    $end            reduce using rule 1 (program -> SVar program .)


state 16

    (2) program -> SStruct SInst .

    $end            reduce using rule 2 (program -> SStruct SInst .)


state 17

    (4) SInst -> SVar . SInst
    (4) SInst -> . SVar SInst
    (5) SInst -> . SIfElse SInst
    (6) SInst -> . SWhile SInst
    (7) SInst -> . SDoWhile SInst
    (8) SInst -> . SFor SInst
    (9) SInst -> . SRet SInst
    (10) SInst -> . SArr SInst
    (11) SInst -> . SBreak SInst
    (12) SInst -> . empty
    (38) SVar -> . STipos IDENTIFICADOR FVar
    (39) SVar -> . IDENTIFICADOR DVar
    (76) SIfElse -> . CONDICIONAL PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ AIfElse
    (108) SWhile -> . BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (109) SDoWhile -> . HACER LLAVE_IZQ SInst LLAVE_DER BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER PUNTO_COMA
    (110) SFor -> . BUCLE_PARA PAREN_IZQ SDecVarFor PUNTO_COMA SOpe PUNTO_COMA SAsigVarFor PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (82) SRet -> . RETORNAR ARet
    (85) SArr -> . IDENTIFICADOR CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER ASIGNAR SOpe PUNTO_COMA
    (86) SArr -> . STipos IDENTIFICADOR CORCHETE_IZQ AArr
    (118) SBreak -> . ROMPER PUNTO_COMA
    (13) empty -> .
    (63) STipos -> . TIPO_ENTERO
    (64) STipos -> . TIPO_CADENA
    (65) STipos -> . TIPO_LARGO
    (66) STipos -> . TIPO_VACIO
    (67) STipos -> . TIPO_CARACTER
    (68) STipos -> . TIPO_FLOTANTE
    (69) STipos -> . TIPO_DOUBLE

    IDENTIFICADOR   shift and go to state 27
    CONDICIONAL     shift and go to state 28
    BUCLE_MIENTRAS  shift and go to state 29
    HACER           shift and go to state 30
    BUCLE_PARA      shift and go to state 31
    RETORNAR        shift and go to state 32
    ROMPER          shift and go to state 33
    $end            reduce using rule 13 (empty -> .)
    LLAVE_DER       reduce using rule 13 (empty -> .)
    TIPO_ENTERO     shift and go to state 8
    TIPO_CADENA     shift and go to state 9
    TIPO_LARGO      shift and go to state 10
    TIPO_VACIO      shift and go to state 11
    TIPO_CARACTER   shift and go to state 12
    TIPO_FLOTANTE   shift and go to state 13
    TIPO_DOUBLE     shift and go to state 14

    SVar                           shift and go to state 17
    SInst                          shift and go to state 41
    SIfElse                        shift and go to state 18
    SWhile                         shift and go to state 19
    SDoWhile                       shift and go to state 20
    SFor                           shift and go to state 21
    SRet                           shift and go to state 22
    SArr                           shift and go to state 23
    SBreak                         shift and go to state 24
    empty                          shift and go to state 25
    STipos                         shift and go to state 26

state 18

    (5) SInst -> SIfElse . SInst
    (4) SInst -> . SVar SInst
    (5) SInst -> . SIfElse SInst
    (6) SInst -> . SWhile SInst
    (7) SInst -> . SDoWhile SInst
    (8) SInst -> . SFor SInst
    (9) SInst -> . SRet SInst
    (10) SInst -> . SArr SInst
    (11) SInst -> . SBreak SInst
    (12) SInst -> . empty
    (38) SVar -> . STipos IDENTIFICADOR FVar
    (39) SVar -> . IDENTIFICADOR DVar
    (76) SIfElse -> . CONDICIONAL PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ AIfElse
    (108) SWhile -> . BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (109) SDoWhile -> . HACER LLAVE_IZQ SInst LLAVE_DER BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER PUNTO_COMA
    (110) SFor -> . BUCLE_PARA PAREN_IZQ SDecVarFor PUNTO_COMA SOpe PUNTO_COMA SAsigVarFor PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (82) SRet -> . RETORNAR ARet
    (85) SArr -> . IDENTIFICADOR CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER ASIGNAR SOpe PUNTO_COMA
    (86) SArr -> . STipos IDENTIFICADOR CORCHETE_IZQ AArr
    (118) SBreak -> . ROMPER PUNTO_COMA
    (13) empty -> .
    (63) STipos -> . TIPO_ENTERO
    (64) STipos -> . TIPO_CADENA
    (65) STipos -> . TIPO_LARGO
    (66) STipos -> . TIPO_VACIO
    (67) STipos -> . TIPO_CARACTER
    (68) STipos -> . TIPO_FLOTANTE
    (69) STipos -> . TIPO_DOUBLE

    IDENTIFICADOR   shift and go to state 27
    CONDICIONAL     shift and go to state 28
    BUCLE_MIENTRAS  shift and go to state 29
    HACER           shift and go to state 30
    BUCLE_PARA      shift and go to state 31
    RETORNAR        shift and go to state 32
    ROMPER          shift and go to state 33
    $end            reduce using rule 13 (empty -> .)
    LLAVE_DER       reduce using rule 13 (empty -> .)
    TIPO_ENTERO     shift and go to state 8
    TIPO_CADENA     shift and go to state 9
    TIPO_LARGO      shift and go to state 10
    TIPO_VACIO      shift and go to state 11
    TIPO_CARACTER   shift and go to state 12
    TIPO_FLOTANTE   shift and go to state 13
    TIPO_DOUBLE     shift and go to state 14

    SIfElse                        shift and go to state 18
    SInst                          shift and go to state 42
    SVar                           shift and go to state 17
    SWhile                         shift and go to state 19
    SDoWhile                       shift and go to state 20
    SFor                           shift and go to state 21
    SRet                           shift and go to state 22
    SArr                           shift and go to state 23
    SBreak                         shift and go to state 24
    empty                          shift and go to state 25
    STipos                         shift and go to state 26

state 19

    (6) SInst -> SWhile . SInst
    (4) SInst -> . SVar SInst
    (5) SInst -> . SIfElse SInst
    (6) SInst -> . SWhile SInst
    (7) SInst -> . SDoWhile SInst
    (8) SInst -> . SFor SInst
    (9) SInst -> . SRet SInst
    (10) SInst -> . SArr SInst
    (11) SInst -> . SBreak SInst
    (12) SInst -> . empty
    (38) SVar -> . STipos IDENTIFICADOR FVar
    (39) SVar -> . IDENTIFICADOR DVar
    (76) SIfElse -> . CONDICIONAL PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ AIfElse
    (108) SWhile -> . BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (109) SDoWhile -> . HACER LLAVE_IZQ SInst LLAVE_DER BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER PUNTO_COMA
    (110) SFor -> . BUCLE_PARA PAREN_IZQ SDecVarFor PUNTO_COMA SOpe PUNTO_COMA SAsigVarFor PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (82) SRet -> . RETORNAR ARet
    (85) SArr -> . IDENTIFICADOR CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER ASIGNAR SOpe PUNTO_COMA
    (86) SArr -> . STipos IDENTIFICADOR CORCHETE_IZQ AArr
    (118) SBreak -> . ROMPER PUNTO_COMA
    (13) empty -> .
    (63) STipos -> . TIPO_ENTERO
    (64) STipos -> . TIPO_CADENA
    (65) STipos -> . TIPO_LARGO
    (66) STipos -> . TIPO_VACIO
    (67) STipos -> . TIPO_CARACTER
    (68) STipos -> . TIPO_FLOTANTE
    (69) STipos -> . TIPO_DOUBLE

    IDENTIFICADOR   shift and go to state 27
    CONDICIONAL     shift and go to state 28
    BUCLE_MIENTRAS  shift and go to state 29
    HACER           shift and go to state 30
    BUCLE_PARA      shift and go to state 31
    RETORNAR        shift and go to state 32
    ROMPER          shift and go to state 33
    $end            reduce using rule 13 (empty -> .)
    LLAVE_DER       reduce using rule 13 (empty -> .)
    TIPO_ENTERO     shift and go to state 8
    TIPO_CADENA     shift and go to state 9
    TIPO_LARGO      shift and go to state 10
    TIPO_VACIO      shift and go to state 11
    TIPO_CARACTER   shift and go to state 12
    TIPO_FLOTANTE   shift and go to state 13
    TIPO_DOUBLE     shift and go to state 14

    SWhile                         shift and go to state 19
    SInst                          shift and go to state 43
    SVar                           shift and go to state 17
    SIfElse                        shift and go to state 18
    SDoWhile                       shift and go to state 20
    SFor                           shift and go to state 21
    SRet                           shift and go to state 22
    SArr                           shift and go to state 23
    SBreak                         shift and go to state 24
    empty                          shift and go to state 25
    STipos                         shift and go to state 26

state 20

    (7) SInst -> SDoWhile . SInst
    (4) SInst -> . SVar SInst
    (5) SInst -> . SIfElse SInst
    (6) SInst -> . SWhile SInst
    (7) SInst -> . SDoWhile SInst
    (8) SInst -> . SFor SInst
    (9) SInst -> . SRet SInst
    (10) SInst -> . SArr SInst
    (11) SInst -> . SBreak SInst
    (12) SInst -> . empty
    (38) SVar -> . STipos IDENTIFICADOR FVar
    (39) SVar -> . IDENTIFICADOR DVar
    (76) SIfElse -> . CONDICIONAL PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ AIfElse
    (108) SWhile -> . BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (109) SDoWhile -> . HACER LLAVE_IZQ SInst LLAVE_DER BUCLE_MIENTRAS PAREN_IZQ SOpe PAREN_DER PUNTO_COMA
    (110) SFor -> . BUCLE_PARA PAREN_IZQ SDecVarFor PUNTO_COMA SOpe PUNTO_COMA SAsigVarFor PAREN_DER LLAVE_IZQ SInst LLAVE_DER
    (82) SRet -> . RETORNAR ARet
    (85) SArr -> . IDENTIFICADOR CORCHETE_IZQ NUMERO_ENTERO CORCHETE_DER ASIGNAR SOpe PUNTO_COMA
    (86) SArr -> . STipos IDENTIFICADOR CORCHETE_IZQ AArr
    (118) SBreak -> . ROMPER PUNTO_COMA
    (13) empty -> .
    (63) STipos -> . TIPO_ENTERO
    (64) STipos -> . TIPO_CADENA
    (65) STipos -> . TIPO_LARGO
    (66) STipos -> . TIPO_VACIO
    (67) STipos -> . TIPO_CARACTER
    (68) STipos -> . TIPO_FLOTANTE
    (69) STipos -> . TIPO_DOUBLE

    IDENTIFICADOR   shift and go to state 27
    CONDICIONAL     shift and go to state 28
    BUCLE_MIENTRAS  shift and go to state 29
    HACER           shift and go to state 30
    BUCLE_PARA      shift and go to state 31
    RETORNAR        shift and go to state 32
    ROMPER          shift and go to state 33
    $end            reduce using rule 13 (empty -> .)
    LLAVE_DER       reduce using rule 13 (empty -> .)
    TIPO_ENTERO     shift and go to state 8
    TIPO_CADENA     shift and go to state 9
    TIPO_LARGO      shift and go to state 10
    TIPO_VACIO      shift and go to state 11
    TIPO_CARACTER   shift and go to state 12
    TIPO_FLOTANTE   shift and go to state 13
    TIPO_DOUBLE     shift and go to state 14

    SDoWhile                       shift and go to state 20
    SInst                          shift and go to state 44
    SVar                           shift and go to state 17
    SIfElse                        shift and go to state 18
    SWhile                         shift and go to state 19
    SFor                           shift and go to state 21
    SRet                           shift and go to state 22
    SArr                           shift and go to state 23
    SBreak                         shift and go to state 24
    empty                          shift and go to state 25
    STipos                         shift and go to state 26

state 21
